# mindbw

./: CMakeLists.txt  README.md
include/db/: SQLite3.h
include/mindbw/: SQLite3.h  Types.h
scripts/: sqlite3-execute
src/: SQLite3.cpp
test/: SQLite3Test.cpp  schema.sql
xml/: data.xml
